remove eureka url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=forex-service
-server.port=8000
+server.port=8080
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
-eureka.client.service-url.default-zone=http://eureka-ms-currency.192.168.99.101.nip.io:8761/eureka
+#eureka.client.service-url.default-zone=http://appeureka-test-ms.192.168.99.101.nip.io/eureka
