--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ server.port=8080
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
-#eureka.client.service-url.default-zone=http://appeureka-test-ms.192.168.99.101.nip.io/eureka
+eureka.client.service-url.default-zone=http://appeureka-test-ms.192.168.99.101.nip.io/eureka
